# capnp-fortran

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  cog.toml  fpm.toml  lychee.toml  meson.build  pixi.toml  prek.toml
.github/workflows/: big-endian.yml  ci.yml  ci_prek.yml  coverage.yml  doc_commenter.yml  docs.yml
app/: capnpc_emit.f90  capnpc_schema.f90  main.f90
cmake/: capnpConfig.cmake.in  capnp_fortranConfig.cmake.in
cmake/fetchcontent_smoke/: CMakeLists.txt  smoke.f90
docs/: export.el  reference.md
docs/orgmode/: architecture.org  codegen.org  index.org  install.org  interop.org  reference.org  rpc.org  tutorial.org
docs/source/: CNAME  architecture.rst  codegen.rst  conf.py  index.rst  install.rst  interop.rst  reference.rst  references.bib  rpc.rst  tutorial.rst
docs/source/_static/: custom.css
docs/source/_templates/partials/: extra-head.html
interop/: README.md  golden_master.c  meson.build  rpc_client.f90  rpc_peer_server.c++  run_rpc_interop.sh
schema/: adder.capnp  addressbook.capnp  box.capnp  common.capnp  dual.capnp  holder.capnp  kindset.capnp  kitchen.capnp  longname.capnp  streamer.capnp
scripts/: build-nofpm.sh  coverage.sh  fypp-gen.sh  std-check.sh
src/: capnp.f90  capnp_arena.f90  capnp_cabi.f90  capnp_canonical.f90  capnp_dynamic.f90  capnp_endian.f90  capnp_endian.fypp  capnp_kinds.f90  capnp_message.f90  capnp_message.fypp  capnp_packed.f90  capnp_pointer.f90  capnp_posix.f90  capnp_rpc.f90  capnp_rpc_transport.f90  capnp_schema.f90  capnp_serialize.f90  capnp_stream.f90  capnp_union.f90  rpc_capnp.f90  rpc_twoparty_capnp.f90  stream_capnp.f90
subprojects/: c-capnproto.wrap
test/: addressbook_schema.f90  check.f90  rpc_adder_impl.f90  rpc_servers.f90  rpc_writer_impl.f90  test_addressbook.f90  test_canonical.f90  test_dynamic.f90  test_generated.f90  test_generic.f90  test_holder.f90  test_interop.f90  test_kitchen.f90  test_parity.f90  test_rpc.f90  test_rpc_typed.f90  test_stream.f90  test_wire.f90  tester.f90
